--- a/css/angel-yu.webflow.css
+++ b/css/angel-yu.webflow.css
@@ -1,11 +1,11 @@
 .link {
-  font-family: 'Roboto Condensed', sans-serif;
-  color: #c67d6a;
+  font-family: Roboto, sans-serif;
+  color: #333;
   font-size: 18px;
   line-height: 32px;
-  font-style: normal;
+  font-style: italic;
   font-weight: 300;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .link.home.resume {
@@ -25,6 +25,7 @@
   color: #333;
   font-size: 16px;
   line-height: 20px;
+  font-style: normal;
   font-weight: 300;
   letter-spacing: 1px;
   text-decoration: none;
@@ -65,13 +66,17 @@
 
 .landingbanner2.projpage {
   position: relative;
-  height: 750px;
+  height: 700px;
   margin-right: 0px;
   margin-left: 0px;
   padding-right: 50px;
   padding-left: 50px;
   background-image: -webkit-linear-gradient(270deg, #f5f5f7, #f5f5f7);
   background-image: linear-gradient(180deg, #f5f5f7, #f5f5f7);
+}
+
+.landingbanner2.projpage.aboutpage {
+  height: 900px;
 }
 
 .projheading {
@@ -125,12 +130,13 @@
 }
 
 .projheading.secondline.descenders {
-  margin-left: -3px;
+  margin-left: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
-  font-size: 50px;
-  line-height: 55px;
-  letter-spacing: -2px;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 300;
+  letter-spacing: 0px;
 }
 
 .projheading.small {
@@ -142,9 +148,11 @@
   padding-left: 50px;
   float: none;
   clear: none;
-  font-size: 50px;
-  line-height: 55px;
-  letter-spacing: -2px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 300;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 .landingtext {
@@ -174,7 +182,7 @@
   font-size: 70px;
   line-height: 80px;
   font-weight: 100;
-  letter-spacing: -5px;
+  letter-spacing: -3px;
   text-transform: none;
 }
 
@@ -196,6 +204,11 @@
 
 .landingtext.projpage.secondline {
   padding-top: 0px;
+}
+
+.landingtext.projpage.about {
+  margin-bottom: 250px;
+  padding-top: 20px;
 }
 
 .image {
@@ -275,7 +288,7 @@
 .image.projpage {
   width: auto;
   max-width: 50%;
-  margin-top: 80px;
+  margin-top: 50px;
   margin-bottom: 0px;
   float: none;
   clear: none;
@@ -326,6 +339,7 @@
 
 .image.projpage.rsmodel {
   max-width: 50%;
+  margin-top: 40px;
 }
 
 .image._2 {
@@ -428,8 +442,11 @@
 }
 
 .projroles.projpage {
-  position: relative;
-  top: -70px;
+  position: absolute;
+  left: 0px;
+  top: 100px;
+  right: 50px;
+  bottom: 0px;
   width: auto;
   max-width: 100%;
   margin: 0px;
@@ -518,7 +535,7 @@
 
 .para.projpage.toppadding {
   max-width: 50%;
-  margin-top: 40px;
+  margin-top: 30px;
   margin-bottom: 0px;
   float: none;
   clear: none;
@@ -545,7 +562,7 @@
 }
 
 .para.projpage.toppadding.secondpara {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .para.projpage.aboutme {
@@ -559,7 +576,7 @@
 }
 
 .para.projpage.insights {
-  max-width: 50%;
+  max-width: 45%;
   margin-top: 40px;
   margin-right: 15px;
   margin-bottom: 0px;
@@ -571,7 +588,7 @@
   font-size: 35px;
   line-height: 40px;
   font-weight: 300;
-  letter-spacing: -1px;
+  letter-spacing: -1.5px;
   text-transform: none;
 }
 
@@ -721,6 +738,11 @@
   padding-left: 10px;
   float: none;
   clear: none;
+}
+
+.projsection.projpage.fullblownimage.medium {
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .projsection.projpage.topborder {
@@ -887,22 +909,29 @@
 }
 
 .name.home {
-  margin-top: 90px;
+  margin-top: 0px;
   margin-bottom: 0px;
-  margin-left: -2px;
+  margin-left: 10px;
   padding-left: 0px;
+  float: left;
   font-family: 'Roboto Condensed', sans-serif;
+  color: #333;
   font-size: 20px;
   line-height: 30px;
   font-weight: 300;
   text-align: left;
-  letter-spacing: 0.5px;
+  letter-spacing: 0px;
+  text-decoration: none;
   text-transform: none;
+}
+
+.name.home:hover {
+  color: #aaa;
 }
 
 .fullblownimage.projpage {
   width: auto;
-  margin: 80px 0px 0px;
+  margin: 150px 0px 0px;
   padding-right: 0px;
   float: left;
   clear: left;
@@ -927,7 +956,7 @@
 }
 
 .fullblownimage.projpage.projshowcase.firstimage {
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .homeio.home {
@@ -964,15 +993,15 @@
 
 .design-statement {
   width: 70%;
-  margin-top: 240px;
-  margin-bottom: 25px;
+  margin-top: 260px;
+  margin-bottom: 45px;
   margin-left: -7px;
   float: none;
   clear: none;
   font-family: 'Roboto Slab', sans-serif;
   color: #d4d3d3;
   font-size: 65px;
-  line-height: 68px;
+  line-height: 65px;
   font-weight: 300;
   text-align: left;
   letter-spacing: -4px;
@@ -1066,9 +1095,9 @@
 
 .sectiontitles.projpage {
   max-width: 50%;
-  margin-top: 250px;
+  margin-top: 150px;
   margin-bottom: 0px;
-  margin-left: -4px;
+  margin-left: 0px;
   padding-top: 0px;
   font-family: 'Roboto Slab', sans-serif;
   color: #333;
@@ -1097,7 +1126,7 @@
 
 .sectiontitles.projpage.multiline {
   max-width: 50%;
-  margin-top: 250px;
+  margin-top: 150px;
   margin-left: -4px;
   float: none;
   clear: none;
@@ -1117,7 +1146,7 @@
 .sectiontitles.projpage.multiline.afterprocesslabel {
   max-width: 50%;
   margin-top: 80px;
-  margin-left: -4px;
+  margin-left: 0px;
   font-family: 'Roboto Slab', sans-serif;
   color: #333;
   font-size: 35px;
@@ -1178,6 +1207,11 @@
   text-transform: uppercase;
 }
 
+.caption.projpage.fullblownimage {
+  margin-bottom: 0px;
+  margin-left: 42px;
+}
+
 .caption.fullblownimage {
   margin-bottom: 80px;
   margin-left: 50px;
@@ -1196,8 +1230,9 @@
   left: 50px;
   top: 460px;
   max-width: 50%;
-  margin: 0px;
-  float: left;
+  margin: 0px 0px 150px;
+  float: none;
+  clear: none;
   font-family: Roboto, sans-serif;
   color: #333;
   font-size: 18px;
@@ -1313,6 +1348,7 @@
 
 .sumtotal-link {
   height: 100%;
+  text-transform: uppercase;
 }
 
 .landingbanner {
@@ -1323,6 +1359,47 @@
 
 .nav.home {
   margin-bottom: 80px;
+}
+
+.image-2 {
+  margin-top: 0px;
+  float: left;
+}
+
+.logo {
+  margin-top: 0px;
+  padding-top: 90px;
+}
+
+.logotext {
+  margin-left: 10px;
+  float: left;
+  clear: none;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #333;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 300;
+}
+
+.logotext:hover {
+  color: #aaa;
+}
+
+.image-3 {
+  float: left;
+}
+
+.abouttext {
+  position: absolute;
+  top: 460px;
+  max-width: 50%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 300;
 }
 
 html.w-mod-js *[data-ix="landingtextanimation"] {
@@ -1355,21 +1432,39 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     padding-right: 40px;
   }
   .landingbanner2.projpage {
+    height: 850px;
     padding-right: 30px;
     padding-left: 30px;
   }
+  .landingbanner2.projpage.safenet {
+    height: 1000px;
+  }
+  .landingbanner2.projpage.homeio {
+    height: 1000px;
+  }
+  .landingbanner2.projpage.finally {
+    height: 800px;
+  }
+  .landingbanner2.projpage.parkhelper {
+    height: 900px;
+  }
+  .landingbanner2.projpage.sumtotal {
+    height: 800px;
+  }
   .projheading.secondline.descenders {
-    font-size: 45px;
-    line-height: 50px;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: 0px;
   }
   .projheading.small {
     left: 40px;
-    top: 40px;
+    top: 60px;
     width: 300px;
     padding-bottom: 0px;
     padding-left: 0px;
-    font-size: 45px;
-    line-height: 50px;
+    font-size: 15px;
+    line-height: 23px;
+    letter-spacing: 1.5px;
   }
   .landingtext.projpage {
     margin-left: 0px;
@@ -1383,7 +1478,7 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .projroles.projpage {
     position: relative;
     top: 0px;
-    margin-top: 25px;
+    margin-top: 0px;
     text-align: left;
   }
   .para.projpage.toppadding {
@@ -1435,6 +1530,9 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     padding-left: 0px;
   }
   .column-2.homesections.leftborder {
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
     height: 100%;
   }
   .column-2.homesections.homeio {
@@ -1450,7 +1548,7 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     line-height: 19px;
   }
   .name.home {
-    margin-top: 80px;
+    margin-top: 0px;
   }
   .homeio.home {
     left: auto;
@@ -1462,10 +1560,10 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .design-statement {
     width: 90%;
     margin-top: 320px;
-    margin-bottom: 20px;
+    margin-bottom: 45px;
     margin-left: -4px;
     font-size: 54px;
-    line-height: 58px;
+    line-height: 56px;
     letter-spacing: -3px;
   }
   .projdes {
@@ -1473,11 +1571,11 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .sectiontitles.projpage {
     max-width: 75%;
-    margin-top: 200px;
+    margin-top: 150px;
   }
   .sectiontitles.projpage.multiline {
     max-width: 75%;
-    margin-top: 200px;
+    margin-top: 150px;
   }
   .sectiontitles.projpage.multiline.afterprocesslabel {
     max-width: 75%;
@@ -1485,11 +1583,18 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .caption.projpage {
     max-width: 75%;
   }
+  .caption.projpage.fullblownimage {
+    margin-bottom: 0px;
+    margin-left: 20px;
+  }
   .introtext.projpage.toppadding {
     position: relative;
     left: 0px;
-    top: 250px;
+    top: 50px;
     max-width: 80%;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    float: none;
   }
   .finallyheading {
     left: 40px;
@@ -1502,17 +1607,47 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .nav.home {
     margin-bottom: 80px;
   }
+  .abouttext {
+    max-width: 80%;
+  }
 }
 
 @media (max-width: 767px) {
+  .link {
+    font-size: 18px;
+  }
   .link.home.resume {
     padding-top: 0px;
     padding-right: 20px;
     font-size: 11px;
+    font-style: normal;
+  }
+  .link.projpage {
+    font-size: 16px;
+    line-height: 26px;
   }
   .landingbanner2.projpage {
-    height: 650px;
+    height: 750px;
+    padding-right: 10px;
     padding-left: 10px;
+  }
+  .landingbanner2.projpage.aboutpage {
+    height: 560px;
+  }
+  .landingbanner2.projpage.safenet {
+    height: 800px;
+  }
+  .landingbanner2.projpage.homeio {
+    height: 750px;
+  }
+  .landingbanner2.projpage.finally {
+    height: 650px;
+  }
+  .landingbanner2.projpage.parkhelper {
+    height: 720px;
+  }
+  .landingbanner2.projpage.sumtotal {
+    height: 660px;
   }
   .projheading {
     padding-top: 35px;
@@ -1523,17 +1658,21 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .projheading.secondline.descenders {
     margin-left: -1px;
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 300;
+    letter-spacing: -0.5px;
   }
   .projheading.small {
     left: 15px;
-    top: 20px;
-    bottom: 20px;
+    top: 35px;
+    bottom: 0px;
     overflow: hidden;
     width: auto;
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 300;
+    letter-spacing: 1px;
   }
   .landingtext.projpage {
     padding-top: 50px;
@@ -1566,26 +1705,36 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     padding-top: 40px;
   }
   .projroles.projpage {
-    margin-top: 30px;
+    margin-top: 0px;
     font-size: 45px;
     line-height: 45px;
     letter-spacing: -3px;
   }
   .para.projpage.toppadding {
     max-width: 80%;
+    font-size: 16px;
+    line-height: 26px;
   }
   .para.projpage.toppadding.paraafter {
     max-width: 80%;
   }
   .para.projpage.toppadding.afterlabel {
     max-width: 80%;
+    margin-top: 30px;
   }
   .para.projpage.insights {
     max-width: 80%;
+    margin-top: 30px;
+    font-size: 30px;
+    line-height: 32px;
+  }
+  .sectionlabels.projpage.designprocess {
+    margin-top: 150px;
   }
   .nextprojectbutton {
     width: auto;
     margin-right: 30px;
+    padding-top: 80px;
   }
   .column-1.homesections {
     height: auto;
@@ -1605,11 +1754,18 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .projsection.home.finally {
     position: relative;
+    width: 100%;
     height: 260px;
   }
   .projsection.projpage {
     padding-right: 10px;
     padding-left: 10px;
+  }
+  .projsection.projpage.topborder.youmightlike {
+    margin-top: 100px;
+  }
+  .projsection.projpage.youmightlike {
+    margin-top: 150px;
   }
   .column-2.homesections {
     position: absolute;
@@ -1633,12 +1789,33 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     height: 250px;
     padding-right: 0px;
   }
+  .youmightalsolike.projpage {
+    padding-top: 20px;
+    font-size: 16px;
+  }
+  .projtitle.projpage {
+    font-size: 30px;
+    line-height: 32px;
+  }
   .projinfo.projpage {
     margin-left: 0px;
   }
+  .projinfo.youmightlike {
+    margin-bottom: 0px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .projlink.projpage {
+    margin-top: 0px;
+    font-size: 30px;
+    line-height: 32px;
+  }
   .name.home {
-    margin-top: 10px;
+    margin-top: 0px;
     font-size: 13px;
+  }
+  .fullblownimage.projpage {
+    margin-top: 100px;
   }
   .homeio.home {
     position: absolute;
@@ -1651,10 +1828,10 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .design-statement {
     width: 90%;
-    margin-top: 70px;
-    margin-bottom: 5px;
+    margin-top: 50px;
+    margin-bottom: 15px;
     font-size: 32px;
-    line-height: 36px;
+    line-height: 32px;
     letter-spacing: -2px;
   }
   .projdes {
@@ -1664,21 +1841,37 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .sectiontitles.projpage {
     max-width: 80%;
+    margin-top: 100px;
+    font-size: 30px;
+    line-height: 32px;
   }
   .sectiontitles.projpage.multiline {
     max-width: 80%;
+    margin-top: 100px;
+    font-size: 30px;
+    line-height: 32px;
   }
   .sectiontitles.projpage.multiline.afterprocesslabel {
     max-width: 80%;
+    font-size: 30px;
+    line-height: 32px;
   }
   .caption.projpage {
     max-width: 80%;
   }
+  .caption.projpage.fullblownimage {
+    margin-top: 0px;
+    margin-left: 0px;
+    line-height: 26px;
+  }
   .introtext.projpage.toppadding {
-    top: 30px;
-    margin-top: 90px;
-    font-size: 18px;
-    line-height: 30px;
+    top: 50px;
+    margin-top: 0px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .smallthumbs.home {
+    position: static;
   }
   .finallylink {
     position: absolute;
@@ -1702,15 +1895,55 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .nav.home {
     margin-bottom: 20px;
   }
+  .logo {
+    margin-top: 0px;
+    padding-top: 20px;
+  }
+  .logotext {
+    margin-left: 8px;
+    font-size: 15px;
+  }
+  .abouttext {
+    top: 160px;
+    max-width: 85%;
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
 
 @media (max-width: 479px) {
+  .link {
+    font-size: 16px;
+  }
   .link.home.resume {
     padding-right: 20px;
     font-size: 12px;
   }
+  .link.projpage {
+    font-size: 16px;
+    line-height: 26px;
+  }
   .landingbanner2.projpage {
+    height: 1020px;
     padding-right: 10px;
+  }
+  .landingbanner2.projpage.aboutpage {
+    height: 800px;
+  }
+  .landingbanner2.projpage.safenet {
+    height: 1000px;
+  }
+  .landingbanner2.projpage.homeio {
+    height: 1020px;
+  }
+  .landingbanner2.projpage.finally {
+    height: 950px;
+  }
+  .landingbanner2.projpage.parkhelper {
+    height: 950px;
+  }
+  .landingbanner2.projpage.sumtotal {
+    height: 850px;
   }
   .projheading {
     width: 100%;
@@ -1721,14 +1954,20 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     letter-spacing: -2px;
   }
   .projheading.secondline.descenders {
-    font-size: 30px;
+    font-size: 35px;
     line-height: 35px;
+    font-weight: 100;
+    letter-spacing: -2px;
   }
   .projheading.small {
     left: 10px;
     width: 100%;
-    font-size: 30px;
-    line-height: 35px;
+    margin-top: 10px;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
   }
   .landingtext.projpage {
     font-size: 45px;
@@ -1742,6 +1981,9 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   .image.projpage {
     max-width: 95%;
     margin-top: 50px;
+  }
+  .image.projpage.rsmodel {
+    max-width: 95%;
   }
   .image.projpage.diagram {
     max-width: 130%;
@@ -1786,14 +2028,15 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .para.projpage.toppadding.afterlabel {
     max-width: 95%;
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 16px;
     line-height: 26px;
   }
   .para.projpage.insights {
     max-width: 95%;
     margin-top: 30px;
-    font-size: 32px;
+    font-size: 30px;
+    line-height: 32px;
     letter-spacing: -1.5px;
   }
   .sectionlabels.projpage.designprocess {
@@ -1804,6 +2047,7 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     width: auto;
     margin-right: 30px;
     padding-top: 60px;
+    padding-bottom: 20px;
     font-size: 15px;
   }
   .column-1.homesections {
@@ -1825,6 +2069,12 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .projsection.home.finally {
     height: 600px;
+  }
+  .projsection.projpage.topborder.youmightlike {
+    margin-top: 100px;
+  }
+  .projsection.projpage.youmightlike {
+    margin-top: 100px;
   }
   .projsection.projpage.projshowcase {
     padding-right: 0px;
@@ -1856,6 +2106,8 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     right: 0px;
     bottom: auto;
     height: 300px;
+    border-top-width: 1px;
+    border-top-color: #dfdfdf;
   }
   .column-2.homesections.homeio {
     position: absolute;
@@ -1864,7 +2116,11 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     bottom: 0px;
     height: 300px;
   }
+  .youmightalsolike.projpage {
+    font-size: 14px;
+  }
   .projtitle.projpage {
+    max-width: 90%;
     margin-top: 40px;
   }
   .projinfo.projpage {
@@ -1879,10 +2135,12 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .projlink.projpage {
     margin-top: 40px;
+    font-size: 25px;
+    line-height: 30px;
   }
   .name.home {
-    margin-top: 20px;
-    margin-left: 0px;
+    margin-top: 0px;
+    margin-left: 10px;
     font-size: 15px;
   }
   .fullblownimage.projpage {
@@ -1901,8 +2159,8 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .design-statement {
     width: 90%;
-    margin-top: 110px;
-    margin-bottom: 10px;
+    margin-top: 90px;
+    margin-bottom: 20px;
     margin-left: -4px;
     font-size: 33px;
     line-height: 38px;
@@ -1917,13 +2175,19 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
     letter-spacing: 1px;
   }
   .sectiontitles.projpage {
-    margin-top: 150px;
+    margin-top: 100px;
+    font-size: 30px;
+    line-height: 32px;
   }
   .sectiontitles.projpage.multiline {
-    margin-top: 150px;
+    margin-top: 100px;
+    font-size: 30px;
+    line-height: 32px;
   }
   .sectiontitles.projpage.multiline.afterprocesslabel {
     margin-top: 50px;
+    font-size: 30px;
+    line-height: 32px;
   }
   .caption.projpage {
     max-width: 95%;
@@ -1932,7 +2196,7 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .introtext.projpage.toppadding {
     max-width: 95%;
-    margin-top: 120px;
+    margin-top: 0px;
     font-size: 16px;
     line-height: 26px;
   }
@@ -1965,6 +2229,12 @@ html.w-mod-js *[data-ix="scrollintoview-text"] {
   }
   .nav.home {
     margin-bottom: 60px;
+  }
+  .abouttext {
+    top: 250px;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: -0.1px;
   }
 }
 
